made a mock-up in HTML & CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,8 @@ body {
   color: hsl(206, 17%, 28%);
   font-size: 18px;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 810px;
+  border-radius: 5px;
 
 }
 .card-header {
@@ -18,6 +19,8 @@ body {
     text-align: center;
     padding: 10px;
     color: white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .card-body {
@@ -25,16 +28,33 @@ body {
 }
 
 .card-item{
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  
+  width: 250px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 8px 0px;
+  background-color: rgba(211, 211, 211, 0.315);
+  border-radius: 5px;
+  margin: 5px;
+  display: inline-table;
 }
 
-.card-item h1{
+
+.card-item-heading{
+  font-size: 20px;
   background-color:rgb(0, 119, 247);
   color: white;
-  padding: 7px;
+  padding: 8px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  
 }
-.card-item p{
+.card-item-body {
+  padding: 10px;
+  border-radius: 5px;
+}
+.card-item-p{
+  font-size: 15px;
+  margin-top: 3px;
   padding: 7px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
+  background-color: white;
 }
 
